--- a/loaning-system/templates/upload-files.html
+++ b/loaning-system/templates/upload-files.html
@@ -30,13 +30,16 @@
   </head>
 
   <body>
-    {% with message = get_flashed_messages(category_filter=["success"]) %} {% if
-    message %}
-    <div class="alert alert-success">{{message[0]}}</div>
-    {% endif %} {% endwith %} {% with message =
-    get_flashed_messages(category_filter=["error"]) %} {% if message %}
-    <div class="alert alert-danger">{{message[0]}}</div>
-    {% endif %} {% endwith %}
+    {% with message = get_flashed_messages(category_filter=["success"]) %} 
+      {% if message %}
+        <div class="alert alert-success">{{message[0]}}</div>
+      {% endif %} 
+    {% endwith %} 
+    {% with message = get_flashed_messages(category_filter=["error"]) %} 
+      {% if message %}
+        <div class="alert alert-danger">{{message[0]}}</div>
+      {% endif %} 
+    {% endwith %}
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
       <a class="navbar-brand" href="/">Loaning Dashboard</a>
       <div class="collapse navbar-collapse" id="navbarNav">
@@ -49,76 +52,31 @@
     </nav>
     <div class="container">
       <h1>Upload File Form</h1>
-      <form action="/confirm-upload" method="POST">
+      <br />
+      <p>
+        Please upload the following file using the correct name. If you're not going
+        to use the correct name, application will not work.
+
+        Additionally, please make sure that the data is in the correct format. It is
+        recommended to use the sample data provided in the repository. Please navigate
+        to `loaning-system/data/test.csv` to find the sample data.
+      </p>
+      <form action="/confirmation-page" method="POST" enctype="multipart/form-data">
         <hr class="hr hr-blurry" />
         <div class="form-group">
-          <label for="file-input1"
-            >Please upload file (equipment_cycle.csv):</label
-          >
+          <label for="database_snippet">Please upload file (.csv format only):</label>
           <input
             type="file"
             class="form-control-file"
-            id="file-input1"
+            id="database_snippet"
             accept=".csv"
-            name="equipment_cycle"
-            required
-          />
-        </div>
-        <hr class="hr hr-blurry" />
-        <div class="form-group">
-          <label for="file-input2"
-            >Please upload file (non_unique_user_equipment.csv):</label
-          >
-          <input
-            type="file"
-            class="form-control-file"
-            id="file-input2"
-            accept=".csv"
-            name="non_unique_user_equipment"
-            required
-          />
-        </div>
-        <hr class="hr hr-blurry" />
-        <div class="form-group">
-          <label for="file-input3">Please upload file (test.csv):</label>
-          <input
-            type="file"
-            class="form-control-file"
-            id="file-input3"
-            accept=".csv"
-            name="test"
-            required
-          />
-        </div>
-        <hr class="hr hr-blurry" />
-        <div class="form-group">
-          <label for="file-input4"
-            >Please upload file (unique_user_equipment.csv):</label
-          >
-          <input
-            type="file"
-            class="form-control-file"
-            id="file-input4"
-            accept=".csv"
-            name="unique_user_equipment"
-            required
-          />
-        </div>
-        <hr class="hr hr-blurry" />
-        <div class="form-group">
-          <label for="file-input5">Please upload file (user_cycle.csv):</label>
-          <input
-            type="file"
-            class="form-control-file"
-            id="file-input5"
-            accept=".csv"
-            name="user_cycle"
+            name="database_snippet"
             required
           />
         </div>
         <hr class="hr hr-blurry" />
         <button type="submit" class="btn btn-primary upload-btn">
-          Upload files
+          Upload file
         </button>
       </form>
     </div>
