wip: trying to pass the data file

--- a/loaning-system/templates/confirmation-page.html
+++ b/loaning-system/templates/confirmation-page.html
@@ -54,6 +54,7 @@
       {% endif %}
       <div class="col-md-6">
           {% if file_content %}
+          <!-- <input type="hidden" name="csv_data" value="{{ csv_data }}" /> -->
           <h2>CSV Preview:</h2>
           <table class="table table-striped">
               {% for row in file_content %}
@@ -68,6 +69,7 @@
       </div>
       <br />
       <form action="/confirm-upload" method="POST">
+          <input type="hidden" name="csv_data" value="{{ csv_data }}"> 
           <input type="submit" name="confirm" value="Confirm" class="btn btn-primary" />
           <a class="btn btn-danger" href="/upload-files">Cancel</a>
       </form>
