--- a/loaning-system/templates/index.html
+++ b/loaning-system/templates/index.html
@@ -48,6 +48,16 @@
   </head>
 
   <body>
+    {% with message = get_flashed_messages(category_filter=["success"]) %} 
+      {% if message %}
+        <div class="alert alert-success">{{message[0]}}</div>
+      {% endif %} 
+    {% endwith %} 
+    {% with message = get_flashed_messages(category_filter=["error"]) %} 
+      {% if message %}
+        <div class="alert alert-danger">{{message[0]}}</div>
+      {% endif %} 
+    {% endwith %}
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
       <a class="navbar-brand" href="#">Loaning Dashboard</a>
       <div class="collapse navbar-collapse" id="navbarNav">
