feat: modified user guidelines

--- a/loaning-system/templates/upload-files.html
+++ b/loaning-system/templates/upload-files.html
@@ -54,12 +54,9 @@
       <h1>Upload File Form</h1>
       <br />
       <p>
-        Please upload the following file using the correct name. If you're not going
-        to use the correct name, application will not work.
-
-        Additionally, please make sure that the data is in the correct format. It is
+        Please make sure that the data is in the correct format. It is
         recommended to use the sample data provided in the repository. Please navigate
-        to `loaning-system/data/test.csv` to find the sample data.
+        to loaning-system/data/test.csv to find the sample data.
       </p>
       <form action="/confirmation-page" method="POST" enctype="multipart/form-data">
         <hr class="hr hr-blurry" />
