--- a/loaning-system/templates/confirmation-page.html
+++ b/loaning-system/templates/confirmation-page.html
@@ -70,7 +70,7 @@
       <form action="/confirm-upload" method="POST" enctype="multipart/form-data">
           <input type="hidden" name="csv_data" value="{{ csv_data }}"> 
           <input type="submit" name="confirm" value="Confirm" class="btn btn-primary" />
-          <a class="btn btn-danger" href="/upload-files">Cancel</a>
+          <a class="btn btn-danger" href="/cancel-upload">Cancel</a>
       </form>
   </div>
   <br />
